  - Added comprehensive shared memory layout documentation
  - Simplified destructor using RAII automatic cleanup
  - All 22 tests pass (100% success rate)
  - No changes to public API - fully backward compatible at API level
  - Binary compatibility break: shared memory segments from previous versions are incompatible

# v1.2.3 - 2026-01-29
- Initialize reserved counters for local and shared-memory queues
- Validate shared-memory size is power-of-two and element size matches when attaching
- Add lossy semantics documentation and debug loss detection counter
- Add lossy overwrite tests for in-process and shared-memory queues
- Align hot atomics to cache lines and add light spin backoff under contention
- Add reserve(1) fast path using fetch_add
- Add SLICK_QUEUE_ENABLE_CPU_RELAX to control pause/yield backoff
- Guard against zero-length reservations
- Add limits header

# v1.2.2 - 2026-01-10
- Rename repository from slick_queue to slick-queue (hyphenated naming follows recommended convention)
- Refactor repository name in CMake configuration files
- Update documentation and build references to use new repository name

# v1.2.1 - 2025-12-27
- Fixed a race condition when multi-process trying to create the same shared memory segment
- Fixed CTest integration by moving enable_testing() to root CMakeLists.txt and removing EXCLUDE_FROM_ALL
- Added release workflow

# v1.2.0 - 2025-12-19
- **BREAKING CHANGE**: Refactored `reserved_info` from struct to packed uint64_t for guaranteed lock-free atomics
  - Uses 48-bit index (supports 2^48 = 281 trillion iterations) and 16-bit size
  - `std::atomic<reserved_info>` is now always lock-free on all platforms
  - Reserve size limit of 65,535 (2^16 - 1) when using `read_last()` - see documentation
- Added `HEADER_SIZE` constant to replace magic number 64 in shared memory layout
- Added element size validation in shared memory to prevent type mismatches between processes
- Updated README with vcpkg installation instructions